solved sidenav overflow problem in mobile devices

--- a/src/components/side-nav/side-nav.module.scss
+++ b/src/components/side-nav/side-nav.module.scss
@@ -3,7 +3,7 @@
 @value sideNavWidth: 40rem;
 
 .sideNav {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: -40rem;
   z-index: 1002;
